Change padding-top to 50% to stop map stretching down to next element

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,7 +267,7 @@ p {
     /* Map on Booking Page */
     /* code from https://blog.hubspot.com/website/how-to-embed-google-map-in-html */
     .google-map {
-        padding-bottom: 100%;
+        padding-top: 50%;
         position: relative;
         height: 0;
         overflow: hidden;
